# equity-ml-strategy

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: model_20131231.json  model_20141231.json  model_20151231.json  model_20161231.json
notebooks/: 01_eda.ipynb  02_feature_analysis.ipynb
scripts/: download_kaggle_data.py  load_from_csv.py  run_full_pipeline.py  run_live_signal.py
src/: config.py
src/backtest/: engine.py  metrics.py
src/data/: loader.py  universe.py
src/features/: build.py  technical.py
src/models/: predict.py  registry.py  train.py
src/reporting/: plots.py
tests/: test_backtest.py  test_features.py  test_loader.py
